vault backup: 2022-10-28 01:00:48
Affected files:
.obsidian_win/workspace.json
index/java/framework/junit.md